Adding the ServiceDefaults Project

--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="bootstrap" Version="5.3.6" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
+    </ItemGroup>
+
 </Project>
