Seeding the database

--- a/AppHost/Properties/launchSettings.json
+++ b/AppHost/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:15011;http://localhost:15299",
+      "applicationUrl": "https://localhost:15011",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
