--- a/AppHost/AppHost.csproj
+++ b/AppHost/AppHost.csproj
@@ -11,12 +11,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.0"/>
+        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.4.0" />
+        <PackageReference Include="Aspire.Hosting.SqlServer" Version="9.4.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Api\Api.csproj" />
       <ProjectReference Include="..\Frontend\Frontend.csproj" />
+      <ProjectReference Include="..\MigrationService\MigrationService.csproj" />
     </ItemGroup>
 
 </Project>
