--- a/AppHost/appsettings.Development.json
+++ b/AppHost/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Parameters": {
+    "password": "Password#123"
   }
 }
