--- a/Frontend/Properties/launchSettings.json
+++ b/Frontend/Properties/launchSettings.json
@@ -5,7 +5,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": false,
-        "applicationUrl": "https://localhost:7032;http://localhost:5115",
+        "applicationUrl": "https://localhost:7032",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
