--- a/AppHost/AppHost.csproj
+++ b/AppHost/AppHost.csproj
@@ -22,6 +22,7 @@
       <ProjectReference Include="..\Api\Api.csproj" />
       <ProjectReference Include="..\Frontend\Frontend.csproj" />
       <ProjectReference Include="..\MigrationService\MigrationService.csproj" />
+      <ProjectReference Include="..\RatingService\RatingService.csproj" />
     </ItemGroup>
 
 </Project>
