--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Blazored.Modal" Version="7.3.1" />
       <PackageReference Include="bootstrap" Version="5.3.7" />
     </ItemGroup>
 
